Add service and function type endpoints
