# backend/src/main/resources/openapi/resource-manager.yaml
@@ -162,7 +162,9 @@ tags:
   - name: ensembles/resources
   - name: environments
   - name: functions
+  - name: functionTypes
   - name: k8snamespaces
+  - name: k8sServiceTypes
   - name: logs
   - name: metrics
   - name: platforms
@@ -173,8 +175,8 @@ tags:
   - name: resources/metrics
   - name: resources/slo
   - name: runtimes
-  - name: serviceTypes
   - name: services
+  - name: serviceTypes
   - name: vpcs
 
 paths:
@@ -1614,6 +1616,125 @@ paths:
         500:
           $ref: "#/components/responses/500"
 
+  /function-types/{id}:
+    get:
+      description: Return details about a function type
+      operationId: getFunctionType
+      security:
+        - bearerAuth: [ ]
+      tags:
+        - functionTypes
+      parameters:
+        - $ref: "#/components/parameters/idParam"
+      responses:
+        200:
+          description: Successful pull of a function type
+          headers:
+            content-length:
+              schema:
+                type: integer
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FunctionType"
+        400:
+          $ref: "#/components/responses/400"
+        401:
+          $ref: "#/components/responses/401"
+        404:
+          $ref: "#/components/responses/404"
+        500:
+          $ref: "#/components/responses/500"
+
+    delete:
+      description: Delete a function type
+      operationId: deleteFunctionType
+      security:
+        - bearerAuth: [ ]
+      tags:
+        - functionTypes
+      parameters:
+        - $ref: "#/components/parameters/idParam"
+      responses:
+        204:
+          description: Successful deletion of a function type
+        400:
+          $ref: "#/components/responses/400"
+        401:
+          $ref: "#/components/responses/401"
+        404:
+          $ref: "#/components/responses/404"
+        500:
+          $ref: "#/components/responses/500"
+
+  /function-types:
+    get:
+      description: Return details about all function types managed by the resource manager
+      operationId: listFunctionTypes
+      security:
+        - bearerAuth: [ ]
+      tags:
+        - functionTypes
+      responses:
+        200:
+          description: Successful pull of all function types
+          headers:
+            content-length:
+              schema:
+                type: integer
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/FunctionType"
+        401:
+          $ref: "#/components/responses/401"
+        500:
+          $ref: "#/components/responses/500"
+
+    post:
+      description: Create a new function type
+      operationId: createFunctionType
+      security:
+        - bearerAuth: [ ]
+      tags:
+        - functionTypes
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - name
+              additionalProperties: false
+              properties:
+                name:
+                  type: string
+                  minLength: 1
+                  maxLength: 256
+                  example: splitfiles
+      responses:
+        201:
+          description: Successful creation of a new function type
+          headers:
+            content-length:
+              schema:
+                type: integer
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FunctionType"
+        400:
+          $ref: "#/components/responses/400"
+        401:
+          $ref: "#/components/responses/401"
+        409:
+          $ref: "#/components/responses/409"
+        500:
+          $ref: "#/components/responses/500"
+
   /k8snamespaces:
     get:
       description: Return details about all k8s namespaces managed by the resource manager
@@ -2767,17 +2888,94 @@ paths:
         500:
           $ref: "#/components/responses/500"
 
+  /k8-service-types:
+    get:
+      description: Return details about all k8s service types that are supported by the resource manager
+      operationId: listK8sServiceTypes
+      security:
+        - bearerAuth: []
+      tags:
+        - k8sServiceTypes
+      responses:
+        200:
+          description: Successful pull of all k8sServiceTypes
+          headers:
+            content-length:
+              schema:
+                type: integer
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/K8sServiceType"
+        401:
+          $ref: "#/components/responses/401"
+        500:
+          $ref: "#/components/responses/500"
+
+  /service-types/{id}:
+    get:
+      description: Return details about a service type
+      operationId: getServiceType
+      security:
+        - bearerAuth: [ ]
+      tags:
+        - serviceTypes
+      parameters:
+        - $ref: "#/components/parameters/idParam"
+      responses:
+        200:
+          description: Successful pull of a service type
+          headers:
+            content-length:
+              schema:
+                type: integer
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ServiceType"
+        400:
+          $ref: "#/components/responses/400"
+        401:
+          $ref: "#/components/responses/401"
+        404:
+          $ref: "#/components/responses/404"
+        500:
+          $ref: "#/components/responses/500"
+
+    delete:
+      description: Delete a service type
+      operationId: deleteServiceType
+      security:
+        - bearerAuth: [ ]
+      tags:
+        - serviceTypes
+      parameters:
+        - $ref: "#/components/parameters/idParam"
+      responses:
+        204:
+          description: Successful deletion of a service type
+        400:
+          $ref: "#/components/responses/400"
+        401:
+          $ref: "#/components/responses/401"
+        404:
+          $ref: "#/components/responses/404"
+        500:
+          $ref: "#/components/responses/500"
+
   /service-types:
     get:
       description: Return details about all service types managed by the resource manager
       operationId: listServiceTypes
       security:
-        - bearerAuth: []
+        - bearerAuth: [ ]
       tags:
         - serviceTypes
       responses:
         200:
-          description: Successful pull of all serviceTypes
+          description: Successful pull of all service types
           headers:
             content-length:
               schema:
@@ -2790,6 +2988,48 @@ paths:
                   $ref: "#/components/schemas/ServiceType"
         401:
           $ref: "#/components/responses/401"
+        500:
+          $ref: "#/components/responses/500"
+
+    post:
+      description: Create a new service type
+      operationId: createServiceType
+      security:
+        - bearerAuth: [ ]
+      tags:
+        - serviceTypes
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - name
+              additionalProperties: false
+              properties:
+                name:
+                  type: string
+                  minLength: 1
+                  maxLength: 256
+                  example: splitfiles
+      responses:
+        201:
+          description: Successful creation of a new service type
+          headers:
+            content-length:
+              schema:
+                type: integer
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ServiceType"
+        400:
+          $ref: "#/components/responses/400"
+        401:
+          $ref: "#/components/responses/401"
+        409:
+          $ref: "#/components/responses/409"
         500:
           $ref: "#/components/responses/500"
 
@@ -3361,13 +3601,13 @@ components:
           format: int32
           example: 128
         service_type:
-          $ref: "#/components/schemas/ServiceType"
+          $ref: "#/components/schemas/K8sServiceType"
         created_at:
           type: integer
           format: int64
           example: 1679496667103
 
-    ServiceType:
+    K8sServiceType:
       type: object
       properties:
         service_type_id:
@@ -3411,6 +3651,34 @@ components:
         log_value:
           type: string
           example: resource was deployed
+        created_at:
+          type: integer
+          format: int64
+          example: 1679496667103
+    FunctionType:
+      type: object
+      properties:
+        artifact_type_id:
+          type: integer
+          format: int64
+          example: 1
+        name:
+          type: string
+          example: splitfile
+        created_at:
+          type: integer
+          format: int64
+          example: 1679496667103
+    ServiceType:
+      type: object
+      properties:
+        artifact_type_id:
+          type: integer
+          format: int64
+          example: 1
+        name:
+          type: string
+          example: splitfile
         created_at:
           type: integer
           format: int64
